replaced isBlank with trim.isEmpty for spring boot container compatibility.
build-image seems to create a java 8 image instead of the correct java
11.